--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -11,7 +11,7 @@
 	margin-left: 40%;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.7);
 	text-align: center;
 }
 
@@ -62,3 +62,13 @@
     1px 1px 0 #000;
 }
 
+
+@media (max-width:600px){
+  #signupform{
+
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
