--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,22 +1,20 @@
-.menu1{
-	position: relative;
-	top: 35px;
-	width: 100%;
-	text-transform: uppercase;
-	margin-top:15px;
-}
+
 .upperleft{
 	float: left;
 	width:49%;
 	height:480px;
+  position: relative;
+  top:70px;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0,0,0,0.7);
 	text-align:center;
 }
 .upperright{
 	float: right;
 	width:49%;
+  position: relative;
+  top:70px;
 	height: 480px;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
@@ -45,5 +43,29 @@
   background: white;
   color:black;
 
+}
+
+@media (max-width:600px){
+	.upperleft{
+		float: none;
+		width:100%;
+		height: 210px;
+		}
+.upperright{
+	float: none;
+	width: 100%;
+	height: 200px;
+   }
+   .upperright form{
+   	height: 200px;
+   }
+   .upperleft form{
+   	height: 200px;
+   }
+
+   #del,#cha {
+   	font-size: 100%;
+   	height:200px;
+   }
 }
 
