--- a/assets/css/gamecss.css
+++ b/assets/css/gamecss.css
@@ -51,3 +51,14 @@
 	margin-top: 5%;
 }
 
+@media (max-width:600px){
+	.console1{
+	float:none;
+	width: 100%;
+	height:300px; 
+}
+	.console2{
+	float:none;
+	width: 100%;
+}
+}
