--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -20,7 +20,6 @@
 #del,#cha {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
-  outline: 0;
   background: black;
   width: 100%;
   height:480px;
@@ -30,11 +29,11 @@
   font-size: 55px;
   cursor: pointer;
 }
-#del:hover,#myForm #sub:active,#myForm #sub:focus {
+#del:hover{
   background: white;
   color:black;
 }
-#cha:hover,#myForm #sub:active,#myForm #sub:focus {
+#cha:hover{
   background: white;
   color:black;
 
