--- a/assets/css/changestuff.css
+++ b/assets/css/changestuff.css
@@ -30,7 +30,7 @@
   font-size: 14px;
   cursor: pointer;
 }
-.sub:hover,#myForm .sub:active,#myForm .sub:focus {
+.sub:hover{
   background: white;
   color:black;
 }
