--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -23,3 +23,16 @@
     -1px 1px 0 #000,
     1px 1px 0 #000;
 }
+
+@media (max-width:600px){
+	#about{
+	margin-left: 5px;
+    margin-right: 5px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    font-size: 90%;
+   
+}
+}
