--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -15,11 +15,26 @@
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
     background-color: rgba(0,0,0,0.7);
-	/*border: 2px solid red;
-    border-radius: 12px;*/
 	font-family: "Roboto", sans-serif;
 	text-align:center;
 	font-size: 35px;
 	color: white;
 	font-weight: bold;
+}
+@media (max-width:600px){
+	#creator{
+		font-size: 150%;
+	}
+	#names {
+
+    line-height: 0.4;
+    padding-top: 5%;
+    padding-right: 5%;
+    padding-left: 5%;
+    padding-bottom: 5%;
+    margin-top: 8%;
+    margin-right: 5%;
+    margin-left: 5%;
+    font-size: 100%;
+}
 }
