--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -6,3 +6,18 @@
 	max-width:100%;
 	height: auto;
 }
+
+
+@media (max-width:600px){
+	#logo {
+    display: block;
+    margin: auto;
+    text-align: center;
+    padding: 50px 0px 50px 0px;
+    max-width: 80%;
+    height: auto;
+}
+
+
+
+}
