After Login Page

--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -1,21 +1,4 @@
-/*.menu1{
-  text-align: center;
-  }
 
-.menu1 div{
-	display: inline-block;
-	text-align: left;
-	
-	height: 480px;
-	margin: 20px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    
-	text-align:center;
-	background-color: rgba(0,0,0,0.7);
-  color: white;
-  width: 400px;
-}*/
 main {
   padding-top: 30px;
   width:100%;
@@ -28,8 +11,8 @@ main {
 	margin: 20px;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
-	
     background-color: rgba(0,0,0,0.7);
+    text-align:center;
 	color: white;
 	width: 30%;
 }
@@ -55,45 +38,11 @@ main {
 	margin: 20px;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
-	
     background-color: rgba(0,0,0,0.7);
 	color: white;
 	width: 30%;
 }
 
-/*.inline-block-center {
-  text-align: center;
-}
-.inline-block-center div {
-  display: inline-block;
-  text-align: left;
-}*/
-/*.inline-block-center{
-	display: flex;
-	justify-content: center;
-}*/
-/*.upperleft{
-	float: left;
-	width:49%;
-	height:480px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	text-align:center;
-}
-.upperright{
-	float: right;
-	width:49%;
-	height: 480px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	color: white;
-	font-family: "Roboto", sans-serif;
-	text-align: center;
-	font-size: 18px;
-}
-*/
 .par{
 	margin-top:20%;
 }
@@ -143,4 +92,44 @@ main {
     background-color: white;
 	color:black;
 	cursor: pointer;
+}
+
+@media (max-width:600px){
+	main {
+  display: block;
+}
+	#upperleft{
+		position:absolute;
+		top:1100px;
+    	height: 300px;
+    	width: 90%;
+		margin-left:8px;
+		margin-right: 8px;
+		
+    }
+	#center{
+		position: absolute;
+    	top: 450px;
+    	height: 300px;
+    	width: 90%;
+    	margin-left:8px;
+		margin-right:8px;
+		
+
+
+	}
+	#upperright{
+	position:relative;
+	
+		height: 300px;
+    	margin-left:8px;
+		margin-right:8px;
+		width: 90%;
+
+	}
+	img{
+		height:55%; 
+		padding-left:17px
+	}
+
 }
