--- a/assets/css/deletestuff.css
+++ b/assets/css/deletestuff.css
@@ -1,52 +1,51 @@
-.menu1{
-	position: relative;
-	top: 35px;
-	width: 100%;
-	text-transform: uppercase;
-	margin-top:15px;
-}
+
 .upperleft{
-	float: left;
-	width:49%;
-	height:480px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	text-align:center;
+  float: left;
+  width:49%;
+  height:480px;
+  position: relative ;
+  top:80px;
+  border-bottom: 8px solid black;
+  border-top: 8px solid black;
+  background-color: rgba(0,0,0,0.7);
+  text-align:center;
+  text-transform: uppercase;
+  
 }
 .upperright{
-	float: right;
-	width:49%;
-	height: 480px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	text-align: center;
+  float: right;
+  position: relative ;
+  top:80px;
+  width:49%;
+  height: 480px;
+  border-bottom: 8px solid black;
+  border-top: 8px solid black;
+  background-color: rgba(0,0,0,0.7);
+  text-align: center;
+  text-transform: uppercase;
 }
 
-.menu2{
- position: relative ;
- top: 50px;
-  width: 100%;
-	text-transform: uppercase;
-}
 .lowleft{
-	float: left;
-	width:49%;
-	height:480px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	text-align:center;
+  position: relative ;
+  float: left;
+  width:49%;
+  height:480px;
+  border-bottom: 8px solid black;
+  border-top: 8px solid black;
+  background-color: rgba(0,0,0,0.7);
+  text-align:center;
+  text-transform: uppercase;
 }
 .lowright{
-	float: right;
-	width:49%;
-	height: 480px;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	text-align: center;
+  position: relative ;
+  float: right;
+  width:49%;
+  height: 480px;
+  border-bottom: 8px solid black;
+  border-top: 8px solid black;
+  background-color: rgba(0,0,0,0.7);
+  text-align: center;
+  text-transform: uppercase;
 }
 .deletesessionbutton{
 color:white;
@@ -101,11 +100,34 @@ color:white;
   color:white;
 }
 #sessiontable{
-	margin-left:3%;
-	margin-right:3%;
+  margin-left:3%;
+  margin-right:3%;
 }
 
 .pager{
-	margin-left:3%;
-	margin-top: 8px;
+  margin-left:3%;
+  margin-top: 8px;
+}
+
+
+@media (max-width:600px){
+  .upperleft{
+    float: none;
+    width:100%;
+    top:50px;
+  }
+    .upperright{
+    float: none;
+    width:100%;
+  }
+    .lowleft{
+    float: none;
+    width:100%;
+  }
+    .lowright{
+    float: none;
+    width:100%;
+  }
+
+
 }
