--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,18 +1,15 @@
-/* LOGIN FORM CSS */
+
 #loginform{
-	position: relative;
-	padding-top: 30px;
-	padding-right: 15px;
-	padding-left: 15px;
-	padding-bottom: 30px;
-	margin-top: 10%;
-	margin-right: 40%;
-	margin-left: 40%;
+  position: relative;
+	top:100px;
+  margin: auto;
+  text-align: center;
+  padding: 20px;
+  max-width:25%;
+  height: 250px;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
-    background-color: rgba(0,0,0,0.7);
-	text-align: center;
-
+  background-color: rgba(0,0,0,0.7);
 }
 
 #myForm #name,#surname {
@@ -26,7 +23,6 @@
 #myForm #sub {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
-  outline: 0;
   background: black;
   width: 100%;
   border: 0;
@@ -35,7 +31,7 @@
   font-size: 14px;
   cursor: pointer;
 }
-#myForm #sub:hover,#myForm #sub:active,#myForm #sub:focus {
+#myForm #sub:hover{
   background: #333;
 }
 #myForm .message {
@@ -47,29 +43,13 @@
   color: white;
   text-decoration: none;
 }
-/* END LOGIN FORM CSS */
-#demo{
-	text-align: center;
-	font-size: 20px;
-	color: white;
-	font-weight: bold;
-	text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
-}
+
 
 @media (max-width:600px){
   #loginform{
-  padding-top: 20px;
-  padding-right: 15px;
-  padding-left: 15px;
-  padding-bottom: 20px;
-  margin-top: 10%;
-  margin-right: 5%;
-  margin-left: 5%;
-}
+  top:30px;
+  max-width:70%;
 
+}
 
 }
