--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,18 +1,15 @@
-/* SIGNUP FORM CSS */
 
 #signupform{
 	position: relative;
-	padding-top: 30px;
-	padding-right: 15px;
-	padding-left: 15px;
-	padding-bottom: 30px;
-	margin-top: 5%;
-	margin-right: 40%;
-	margin-left: 40%;
-	border-bottom: 8px solid black;
-	border-top: 8px solid black;
+  top:100px;
+  margin: auto;
+  text-align: center;
+  padding: 20px;
+  max-width:25%;
+  height: 350px;
+  border-bottom: 8px solid black;
+  border-top: 8px solid black;
   background-color: rgba(0,0,0,0.7);
-	text-align: center;
 }
 
 #myForm2 #firstname,#lastname,#email,#password {
@@ -26,7 +23,6 @@
 #myForm2 #sub {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
-  outline: 0;
   background: black;
   width: 100%;
   border: 0;
@@ -35,7 +31,7 @@
   font-size: 14px;
   cursor: pointer;
 }
-#myForm2 #sub:hover,#myForm #sub:active,#myForm #sub:focus {
+#myForm2 #sub:hover{
   background: #333;
 }
 
@@ -49,26 +45,10 @@
   text-decoration: none;
 }
 
-/* END SIGNUP FORM CSS */
-#demo{
-	text-align: center;
-	font-size: 20px;
-	color: white;
-	font-weight: bold;
-	text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
-}
-
-
 @media (max-width:600px){
   #signupform{
 
-    margin-left: 15px;
-    margin-right: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
+    top:30px;
+  max-width:70%;
   }
 }
