--- a/assets/css/user.css
+++ b/assets/css/user.css
@@ -1,20 +1,26 @@
+.console{
+	padding-top: 30px;
+ 	margin-left: 9%;
+	font-family: "Roboto", sans-serif;
+	color:white;
+}
 
-main {
-  padding-top: 30px;
-  width:100%;
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #upperleft{
-	position: relative;
 	float:left;
-	height: 480px;
+	position:relative;
 	margin: 20px;
+	height:480px;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
     background-color: rgba(0,0,0,0.7);
-    text-align:center;
-	color: white;
-	width: 30%;
+	text-align:center;
+	font-size: 30px;
+	width:25%;
 }
 
 #center{
@@ -28,7 +34,7 @@ main {
 	text-align:center;
     background-color: rgba(0,0,0,0.7);
 	color: white;
-	width: 30%;
+	width: 25%;
 }
 
 #upperright{
@@ -40,23 +46,18 @@ main {
 	border-top: 8px solid black;
     background-color: rgba(0,0,0,0.7);
 	color: white;
-	width: 30%;
-}
-
-.par{
-	margin-top:20%;
+	width: 25%;
 }
 
 .newgame{
-	
 	margin-top: 1%;
 	background: black;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: white;
-  font-size: 14px;
-  cursor: pointer;
+	width: 100%;
+	border: 0;
+	padding: 15px;
+	color: white;
+	font-size: 14px;
+	cursor: pointer;
 }
 
 .newgame:hover,.newgame:active,.newgame:focus {
@@ -64,14 +65,10 @@ main {
   color:black;
 }
 
-
-
-
 #best{
 	margin-top:80px;
 	width:100%;
 }
-
 
 #buttonlist{
 	margin-top:120px;
@@ -95,41 +92,27 @@ main {
 }
 
 @media (max-width:600px){
-	main {
-  display: block;
-}
+	.console {
+		display: block;
+	}
 	#upperleft{
 		position:absolute;
+		float:none;
 		top:1100px;
-    	height: 300px;
-    	width: 90%;
-		margin-left:8px;
-		margin-right: 8px;
-		
+    	height: auto;
+    	width: 90%;	
     }
 	#center{
 		position: absolute;
+		float: none;
     	top: 450px;
-    	height: 300px;
+    	height: auto;
     	width: 90%;
-    	margin-left:8px;
-		margin-right:8px;
-		
-
-
 	}
 	#upperright{
-	position:relative;
-	
+		position:absolute;
+		float: none;
 		height: 300px;
-    	margin-left:8px;
-		margin-right:8px;
 		width: 90%;
-
 	}
-	img{
-		height:55%; 
-		padding-left:17px
-	}
-
 }
