--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,4 +1,3 @@
-
 ul.navigation {
     list-style-type: none;
     margin: 0;
@@ -11,7 +10,6 @@ ul.navigation {
     width: 100%;
     position: fixed;
     z-index: 1;
-
 }
 
 ul.navigation li {
@@ -26,14 +24,14 @@ ul.navigation li a {
     text-decoration: none;
 }
 
-
 ul.navigation li a:hover:not(.active) {
-    background-color: #333;
+    background-color: #484a4f;
 }
 
 .active {
-    background-color: #333;
+    background-color: #27292d;
 }
+
 body{
     background-image: url("../img/city.jpg");
 }
@@ -48,6 +46,7 @@ body{
     box-sizing: border-box;
     display: none;
 }
+
 .responsive-bar h1{
     margin: 0;
     padding:0; 
@@ -57,20 +56,18 @@ body{
     top:0;
     padding: 5px 10px;
     background-color: #f2184f;
-    cursor: pointer;
-    
-    
+    cursor: pointer;   
 }
-@media (max-width:600px){
 
-ul.navigation {
-    display: none;
-}
-.responsive-bar{
-    display: block;
-}
-ul.navigation li {
-    float:none;
-    display:block;
-}
+@media (max-width:600px){
+    ul.navigation {
+        display: none;
+    }
+    .responsive-bar{
+        display: block;
+    }
+    ul.navigation li {
+        float:none;
+        display:block;
+    }
 }
