--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -6,12 +6,7 @@
 #names {
 	line-height: 0.4;
 	padding-top: 30px;
-	padding-right: 30px;
-	padding-left: 30px;
-	padding-bottom: 30px;
-	margin-top: 5%;
-	margin-right: 30%;
-	margin-left: 30%;
+	margin: auto;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
     background-color: rgba(0,0,0,0.7);
@@ -20,21 +15,30 @@
 	font-size: 35px;
 	color: white;
 	font-weight: bold;
+	min-width: 400px;
+}
+
+img {
+	height:35px;
+	width:35px;
 }
 @media (max-width:600px){
 	#creator{
 		font-size: 150%;
 	}
 	#names {
-
-    line-height: 0.4;
-    padding-top: 5%;
-    padding-right: 5%;
-    padding-left: 5%;
-    padding-bottom: 5%;
-    margin-top: 8%;
-    margin-right: 5%;
-    margin-left: 5%;
-    font-size: 100%;
-}
+	    line-height: 0.4;
+	    padding-top: 5%;
+	    padding-right: 5%;
+	    padding-left: 5%;
+	    padding-bottom: 5%;
+	    margin-top: 8%;
+	    margin-right: 5%;
+	    margin-left: 5%;
+	    font-size: 100%;
+	}
+	img {
+		height: 25px;
+		width: 25px;
+	}
 }
