--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -6,7 +6,10 @@
 #names {
 	line-height: 0.4;
 	padding-top: 30px;
-	margin: auto;
+	padding-right: 30px;
+	padding-left: 30px;
+	padding-bottom: 30px;
+	margin: 0;
 	border-bottom: 8px solid black;
 	border-top: 8px solid black;
     background-color: rgba(0,0,0,0.7);
@@ -15,30 +18,31 @@
 	font-size: 35px;
 	color: white;
 	font-weight: bold;
-	min-width: 400px;
 }
 
 img {
 	height:35px;
 	width:35px;
 }
+
 @media (max-width:600px){
 	#creator{
 		font-size: 150%;
 	}
 	#names {
-	    line-height: 0.4;
-	    padding-top: 5%;
-	    padding-right: 5%;
-	    padding-left: 5%;
-	    padding-bottom: 5%;
-	    margin-top: 8%;
-	    margin-right: 5%;
-	    margin-left: 5%;
-	    font-size: 100%;
+
+		line-height: 0.4;
+		padding-top: 5%;
+		padding-right: 5%;
+		padding-left: 5%;
+		padding-bottom: 5%;
+		margin-top: 8%;
+		margin-right: 5%;
+		margin-left: 5%;
+		font-size: 100%;
 	}
 	img {
-		height: 25px;
-		width: 25px;
+		height:25px;
+		width:25px;
 	}
 }
