--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -39,7 +39,7 @@ body{
 .responsive-bar
 {
     margin: 0;
-    padding: 10px, 30px;
+    padding: 10px 30px;
     overflow: hidden;
     background-color: black;
     width: 100%;
