--- a/assets/css/deletestuff.css
+++ b/assets/css/deletestuff.css
@@ -1,4 +1,3 @@
-
 .upperleft{
   float: left;
   width:49%;
@@ -26,8 +25,9 @@
 }
 
 .lowleft{
-  position: relative ;
   float: left;
+  position: relative ;
+  top:100px;
   width:49%;
   height:480px;
   border-bottom: 8px solid black;
@@ -37,8 +37,9 @@
   text-transform: uppercase;
 }
 .lowright{
-  position: relative ;
   float: right;
+  position: relative ;
+  top:100px;
   width:49%;
   height: 480px;
   border-bottom: 8px solid black;
@@ -102,11 +103,13 @@ color:white;
 #sessiontable{
   margin-left:3%;
   margin-right:3%;
+  overflow-y:scroll;
+  height:300px;
+  display:block;
 }
 
-.pager{
-  margin-left:3%;
-  margin-top: 8px;
+::-webkit-scrollbar { 
+    display: none; 
 }
 
 
